fix letters in img name

--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -308,7 +308,7 @@ button.connect {
   max-height: 883px;
   position: relative;
   .wrap-1200 {
-    background: url(../img/wifi-ind.PNG) no-repeat center 230px;
+    background: url(../img/wifi-ind.png) no-repeat center 230px;
     padding-bottom: 80px;
     position: relative;
     z-index: 5;
