--- a/public/css/style.css
+++ b/public/css/style.css
@@ -310,7 +310,7 @@ button.connect:hover {
   position: relative;
 }
 .individual-tarif .wrap-1200 {
-  background: url(../img/wifi-ind.PNG) no-repeat center 230px;
+  background: url(../img/wifi-ind.png) no-repeat center 230px;
   padding-bottom: 80px;
   position: relative;
   z-index: 5;
