--- a/public/css/less/mobile/320.less
+++ b/public/css/less/mobile/320.less
@@ -1,17 +1,19 @@
-@media screen and (max-width: 320px) {
+@media screen and (max-width: 410px) and (max-width: 600px) {
+  .comments-block {
+    .title {
+      padding-top: 150px;
+    }
+  }
+}
+@media screen and (max-width: 400px ) and (min-width: 319px) {
   .comments-block {
     .title {
       padding-top: 220px;
     }
   }
 }
-
 @media screen and (max-width: 600px ) and (min-width: 321px) {
-  .comments-block {
-    .title {
-      padding-top: 220px;
-    }
-  }
+
 
   .individual-tarif {
     .wrap-1200 {
