--- a/public/css/less/mobile/768.less
+++ b/public/css/less/mobile/768.less
@@ -18,6 +18,26 @@
           .hover-block {
             min-height: 250px;
             min-width: 250px;
+            &.t1{background:url(../img/t1-s.png) no-repeat center right, #f2f2f2;
+              &:hover{
+                background:url(../img/t1-s-h.png) no-repeat center right, #00933d;
+              }
+            }
+            &.t2{background:url(../img/t2-s.png) no-repeat center right, #f2f2f2;
+              &:hover{
+                background:url(../img/t2-s-h.png) no-repeat center right, #00933d;
+              }
+            }
+            &.t3{background:url(../img/t3-s.png) no-repeat center right, #f2f2f2;
+              &:hover{
+                background:url(../img/t3-s-h.png) no-repeat center right, #00933d;
+              }
+            }
+            &.t4{background:url(../img/t4-s.png) no-repeat center right, #f2f2f2;
+              &:hover{
+                background:url(../img/t4-s-h.png) no-repeat center right, #00933d;
+              }
+            }
             &:hover {
               transition: all 1s;
               background: #39a651;
