--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -25,6 +25,9 @@
     transition: 1s ease-in;
   }
 }
+.overlay{
+  display: none;
+}
 
 //========================================
 .unlimite-int {
@@ -400,6 +403,9 @@ button.connect {
           font-size: 20px;
           font-weight: normal;
           font-family: @Ubuntu;
+          &[data-field-name="address"] {
+            padding-right: 71px;
+          }
           &:focus, &:hover {
             outline: none;
             border: 1px solid @dark-green;
@@ -498,6 +504,7 @@ ul.icons-list {
 
 
 .comments-block {
+  padding-bottom: 120px;
   .title {
     padding-top: 265px;
     text-align: center;
@@ -653,7 +660,79 @@ li.comment-item {
 
 
 
-
+.application.white-popup {
+  max-width: 460px;
+  margin: 55px auto 0;
+  padding: 30px 70px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  position: relative;
+  z-index: 5;
+  background: #ffffff;
+  h3.title {
+    font-family: @UbuntuBold;
+    font-size: 36px;
+    padding-top: 10px;
+    color: #333333;
+    padding-bottom: 40px;
+  }
+  .row {
+    padding-bottom: 30px;
+    position: relative;
+    .row-name {
+      display: block;
+      font-family: @Ubuntu;
+      color: #333333;
+      font-size: 20px;
+      padding-bottom: 5px;
+    }
+    .popup-field {
+      width: 100%;
+      box-sizing: border-box;
+      padding: 10px;
+      border-radius: 5px;
+      border: 1px solid #cccccc;
+      font-size: 20px;
+      font-weight: normal;
+      font-family: @Ubuntu;
+      &[data-field-name="address"] {
+        padding-right: 71px;
+      }
+      &:focus, &:hover {
+        outline: none;
+        border: 1px solid @dark-green;
+      }
+    }
+    .map-button {
+      position: absolute;
+      right: 10px;
+      text-align: right;
+      font-size: 12px;
+      text-decoration: underline;
+      color: @link-color;
+      top: 40px;
+    }
+    &.button {
+      text-align: right;
+      .send-form {
+        color: #ffffff;
+        font-family: @Ubuntu;
+        padding: 15px 25px;
+        font-size: 20px;
+        border-radius: 30px;
+        border: none;
+        background: @dark-green;
+        margin-top: 8px;
+        position: relative;
+        z-index: 5;
+        &:hover {
+          cursor: pointer;
+          background: #109d2c;
+        }
+      }
+    }
+  }
+}
 
 
 
