--- a/public/css/style.css
+++ b/public/css/style.css
@@ -35,6 +35,9 @@
   border-radius: 20%;
   transition: 1s ease-in;
 }
+.overlay {
+  display: none;
+}
 .unlimite-int {
   background: url(../img/lightness.PNG) no-repeat top center, #379d47;
   box-shadow: 5px 0px 50px rgba(51, 102, 51, 0.5) inset;
@@ -410,6 +413,9 @@ button.connect:hover {
   font-weight: normal;
   font-family: Ubuntu;
 }
+.individual-tarif .wrap-1200 .application .row .popup-field[data-field-name="address"] {
+  padding-right: 71px;
+}
 .individual-tarif .wrap-1200 .application .row .popup-field:focus,
 .individual-tarif .wrap-1200 .application .row .popup-field:hover {
   outline: none;
@@ -496,6 +502,9 @@ ul.icons-list li.icon.play-ic {
   width: 2px;
   height: 18px;
   transition: 1s all;
+}
+.comments-block {
+  padding-bottom: 120px;
 }
 .comments-block .title {
   padding-top: 265px;
@@ -639,6 +648,145 @@ li.comment-item span.comment-speed i.small {
   text-align: center;
   line-height: 27px;
   padding-top: 20px;
+}
+.application.white-popup {
+  max-width: 460px;
+  margin: 55px auto 0;
+  padding: 30px 70px;
+  box-sizing: border-box;
+  border-radius: 20px;
+  position: relative;
+  z-index: 5;
+  background: #ffffff;
+}
+.application.white-popup h3.title {
+  font-family: UbuntuBold;
+  font-size: 36px;
+  padding-top: 10px;
+  color: #333333;
+  padding-bottom: 40px;
+}
+.application.white-popup .row {
+  padding-bottom: 30px;
+  position: relative;
+}
+.application.white-popup .row .row-name {
+  display: block;
+  font-family: Ubuntu;
+  color: #333333;
+  font-size: 20px;
+  padding-bottom: 5px;
+}
+.application.white-popup .row .popup-field {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  border-radius: 5px;
+  border: 1px solid #cccccc;
+  font-size: 20px;
+  font-weight: normal;
+  font-family: Ubuntu;
+}
+.application.white-popup .row .popup-field[data-field-name="address"] {
+  padding-right: 71px;
+}
+.application.white-popup .row .popup-field:focus,
+.application.white-popup .row .popup-field:hover {
+  outline: none;
+  border: 1px solid #379d47;
+}
+.application.white-popup .row .map-button {
+  position: absolute;
+  right: 10px;
+  text-align: right;
+  font-size: 12px;
+  text-decoration: underline;
+  color: #39a651;
+  top: 40px;
+}
+.application.white-popup .row.button {
+  text-align: right;
+}
+.application.white-popup .row.button .send-form {
+  color: #ffffff;
+  font-family: Ubuntu;
+  padding: 15px 25px;
+  font-size: 20px;
+  border-radius: 30px;
+  border: none;
+  background: #379d47;
+  margin-top: 8px;
+  position: relative;
+  z-index: 5;
+}
+.application.white-popup .row.button .send-form:hover {
+  cursor: pointer;
+  background: #109d2c;
+}
+footer.footer {
+  background: #333333;
+  padding: 50px 0 120px;
+}
+footer.footer .wrap-1200.foot-flex {
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: justify;
+      justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4 p.row-text {
+  color: #ffffff;
+  font-family: Ubuntu;
+  line-height: 24px;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4 p.row-text a {
+  background: linear-gradient(to left, transparent, transparent 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
+  background-position: 0 100%;
+  background-size: 10px 1px;
+  background-repeat: repeat-x;
+  color: #379d47;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4 p.row-text a:hover {
+  background: linear-gradient(to left, transparent, transparent 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
+  background-position: 0 100%;
+  background-size: 10px 1px;
+  background-repeat: repeat-x;
+  color: #cccccc;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4 p.row-text a:focus {
+  background: linear-gradient(to left, transparent, transparent 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
+  background-position: 0 100%;
+  background-size: 10px 1px;
+  background-repeat: repeat-x;
+  color: #cccccc;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4:last-child p.row-text a {
+  background: linear-gradient(to left, #379d47, #379d47 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border', endColorstr='@border', GradientType=0);
+  background-position: 0 100%;
+  background-size: 10px 1px;
+  background-repeat: repeat-x;
+  color: #379d47;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4:last-child p.row-text a:hover {
+  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
+  background-position: 0 100%;
+  background-size: 10px 1px;
+  background-repeat: repeat-x;
+  color: #cccccc;
+}
+footer.footer .wrap-1200.foot-flex .col-1-4:last-child p.row-text a:focus {
+  background: linear-gradient(to left, #cccccc, #cccccc 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='@border_h', endColorstr='@border_h', GradientType=0);
+  background-position: 0 100%;
+  background-size: 10px 1px;
+  background-repeat: repeat-x;
+  color: #cccccc;
 }
 header.page-head {
   display: -ms-flexbox;
