--- a/public/css/less/mobile/1024.less
+++ b/public/css/less/mobile/1024.less
@@ -110,7 +110,11 @@
   .col-1-2--last {
     padding-top: 30px;
   }
-
+  header.page-head {
+    nav.main-menu {
+      width: calc(~"100% + 29px");
+    }
+  }
   .unlimite-int {
     .list {
       display: flex;
