--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -108,6 +108,9 @@
   .col-1-2--last {
     padding-top: 30px;
   }
+  header.page-head nav.main-menu {
+    width: calc(100% + 29px);
+  }
   .unlimite-int .list {
     display: -ms-flexbox;
     display: flex;
