--- a/public/css/less/include/footer.less
+++ b/public/css/less/include/footer.less
@@ -1,27 +1,56 @@
-footer.footer{
-  .wrap-1200.foot-flex{
+footer.footer {
+  background: #333333;
+  padding: 15px 0 0px;
+  .wrap-1200.foot-flex {
     display: flex;
+    max-width: 1000px;
+    flex-direction: column;
     justify-content: space-between;
     flex-wrap: wrap;
-    .col-1-4{
-      p.row-text{
-        color: #ffffff;
-        font-family: @Ubuntu;
-        line-height: 24px;
-        a{
-          .link(@dark-green, transparent, #cccccc, transparent);
-        }
-      }
+    padding: 30px 0 40px;
+    background: url(../img/footer.PNG) no-repeat 0px bottom , #333333;
+    .row-1-2 {
+      display: flex;
+      justify-content: space-between;
       &:last-child{
-        p.row-text{
-          a{
-            .link(@dark-green, @dark-green, #cccccc, #cccccc);
+        justify-content: flex-end;
+        padding-top: 50px;
+        .col-1-2{
+          &:first-child{
+            padding-right: 220px;
+          }
+          p.row-text {
+            color: #ffffff;
+            font-family: @Ubuntu;
+            line-height: 24px;
+            a {
+              .link(@dark-green, transparent, #cccccc, transparent);
+            }
           }
         }
+      }
+      &:first-child{
+        .col-1-3 {
+          p.row-text {
+            color: #ffffff;
+            font-family: @Ubuntu;
+            line-height: 24px;
+            a {
+              .link(@dark-green, transparent, #cccccc, transparent);
+            }
+          }
+          &:last-child {
+            p.row-text {
+              font-size: 43px;
+              a {
+                .link(@dark-green, @dark-green, #cccccc, #cccccc);
+              }
+            }
 
+          }
+        }
       }
     }
   }
-  background: #333333;
-  padding: 50px 0 120px;
+
 }
