--- a/public/css/less/mobile/1024.less
+++ b/public/css/less/mobile/1024.less
@@ -1,7 +1,27 @@
 @media screen and (max-width: 1000px) {
+  header.page-head.index-page {
+    margin-left: 0;
+    width: 100%;
+    .info-row {
+      padding: 30px 20px 60px;
+      .connect-item {
+        .connect {
+          background: none;
+        }
+      }
+    }
+    nav.main-menu {
+      background: #ffffff;
+      padding-bottom: 60px;
+      position: relative;
+      top: -1px;
+      border-radius: 0 0 20px 20px;
+    }
+  }
   header.page-head {
     margin-left: 0;
     width: 100%;
+
     .info-row {
       padding: 30px 20px 60px;
       .connect-item {
@@ -21,7 +41,19 @@
 }
 
 @media screen and (max-width: 820px ) {
+  header.page-head.index-page {
+
+    .info-row {
+      flex-wrap: wrap;
+
+      div.logo {
+        width: 100%;
+        text-align: center;
+      }
+    }
+  }
   header.page-head {
+    background: #ffffff;
     .info-row {
       flex-wrap: wrap;
 
@@ -34,12 +66,82 @@
 }
 
 @media screen and (max-width: 660px) {
+  header.page-head.index-page {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: row;
+    align-items: center;
+    padding-bottom: 0;
+    background: #ffffff;
+    .info-row {
+      padding-bottom: 20px;
+      flex-wrap: wrap;
+      box-shadow: none;
+      div.logo {
+        width: auto;
+        display: inline-block;
+      }
+      .inf-block {
+        display: none;
+      }
+      .connect-item {
+        display: none;
+      }
+    }
+    nav.main-menu {
+      width: auto !important;
+      padding-top: 45px;
+      justify-content: flex-start;
+      padding-bottom: 0;
+      position: static;
+      ul.menu {
+        display: none;
+      }
+
+      .mobile-menu {
+        display: block;
+
+        .menu-button {
+          font-family: Ubuntu;
+          font-size: 24px;
+          color: #39a651;
+          display: inline-block;
+          padding: 5px 10px;
+          &.clicked {
+            color: #ffffff;
+            background: #39a651;
+          }
+        }
+        ul.popup-menu {
+          left: 0;
+          position: absolute;
+          width: 100%;
+          max-width: 100%;
+          padding: 40px 0;
+          background: #39a651;
+          display: none;
+          li.popup-menu-item {
+            width: 100%;
+            a.menu-link {
+              padding: 10px 0;
+              margin: 0 40px;
+              color: #ffffff;
+              display: block;
+              font-family: Ubuntu;
+              border-bottom: 1px solid #389738;
+            }
+          }
+        }
+      }
+    }
+  }
   header.page-head {
     display: flex;
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
     background: #ffffff;
+    padding-bottom: 0;
     .info-row {
       padding-bottom: 20px;
       flex-wrap: wrap;
@@ -59,6 +161,7 @@
       justify-content: flex-start;
       padding-bottom: 0;
       position: static;
+      width: auto !important;
       ul.menu {
         display: none;
       }
@@ -110,7 +213,13 @@
   .col-1-2--last {
     padding-top: 30px;
   }
+  header.page-head.index-page {
+    nav.main-menu {
+      width: calc(~"100% + 29px");
+    }
+  }
   header.page-head {
+    background: #ffffff;
     nav.main-menu {
       width: calc(~"100% + 29px");
     }
