--- a/public/css/mobile.css
+++ b/public/css/mobile.css
@@ -1,4 +1,21 @@
 @media screen and (max-width: 1000px) {
+  header.page-head.index-page {
+    margin-left: 0;
+    width: 100%;
+  }
+  header.page-head.index-page .info-row {
+    padding: 30px 20px 60px;
+  }
+  header.page-head.index-page .info-row .connect-item .connect {
+    background: none;
+  }
+  header.page-head.index-page nav.main-menu {
+    background: #ffffff;
+    padding-bottom: 60px;
+    position: relative;
+    top: -1px;
+    border-radius: 0 0 20px 20px;
+  }
   header.page-head {
     margin-left: 0;
     width: 100%;
@@ -18,6 +35,17 @@
   }
 }
 @media screen and (max-width: 820px) {
+  header.page-head.index-page .info-row {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  header.page-head.index-page .info-row div.logo {
+    width: 100%;
+    text-align: center;
+  }
+  header.page-head {
+    background: #ffffff;
+  }
   header.page-head .info-row {
     -ms-flex-wrap: wrap;
         flex-wrap: wrap;
@@ -28,6 +56,79 @@
   }
 }
 @media screen and (max-width: 660px) {
+  header.page-head.index-page {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    -ms-flex-direction: row;
+        flex-direction: row;
+    -ms-flex-align: center;
+        align-items: center;
+    padding-bottom: 0;
+    background: #ffffff;
+  }
+  header.page-head.index-page .info-row {
+    padding-bottom: 20px;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    box-shadow: none;
+  }
+  header.page-head.index-page .info-row div.logo {
+    width: auto;
+    display: inline-block;
+  }
+  header.page-head.index-page .info-row .inf-block {
+    display: none;
+  }
+  header.page-head.index-page .info-row .connect-item {
+    display: none;
+  }
+  header.page-head.index-page nav.main-menu {
+    width: auto !important;
+    padding-top: 45px;
+    -ms-flex-pack: start;
+        justify-content: flex-start;
+    padding-bottom: 0;
+    position: static;
+  }
+  header.page-head.index-page nav.main-menu ul.menu {
+    display: none;
+  }
+  header.page-head.index-page nav.main-menu .mobile-menu {
+    display: block;
+  }
+  header.page-head.index-page nav.main-menu .mobile-menu .menu-button {
+    font-family: Ubuntu;
+    font-size: 24px;
+    color: #39a651;
+    display: inline-block;
+    padding: 5px 10px;
+  }
+  header.page-head.index-page nav.main-menu .mobile-menu .menu-button.clicked {
+    color: #ffffff;
+    background: #39a651;
+  }
+  header.page-head.index-page nav.main-menu .mobile-menu ul.popup-menu {
+    left: 0;
+    position: absolute;
+    width: 100%;
+    max-width: 100%;
+    padding: 40px 0;
+    background: #39a651;
+    display: none;
+  }
+  header.page-head.index-page nav.main-menu .mobile-menu ul.popup-menu li.popup-menu-item {
+    width: 100%;
+  }
+  header.page-head.index-page nav.main-menu .mobile-menu ul.popup-menu li.popup-menu-item a.menu-link {
+    padding: 10px 0;
+    margin: 0 40px;
+    color: #ffffff;
+    display: block;
+    font-family: Ubuntu;
+    border-bottom: 1px solid #389738;
+  }
   header.page-head {
     display: -ms-flexbox;
     display: flex;
@@ -38,6 +139,7 @@
     -ms-flex-align: center;
         align-items: center;
     background: #ffffff;
+    padding-bottom: 0;
   }
   header.page-head .info-row {
     padding-bottom: 20px;
@@ -60,6 +162,7 @@
         justify-content: flex-start;
     padding-bottom: 0;
     position: static;
+    width: auto !important;
   }
   header.page-head nav.main-menu ul.menu {
     display: none;
@@ -107,6 +210,12 @@
   }
   .col-1-2--last {
     padding-top: 30px;
+  }
+  header.page-head.index-page nav.main-menu {
+    width: calc(100% + 29px);
+  }
+  header.page-head {
+    background: #ffffff;
   }
   header.page-head nav.main-menu {
     width: calc(100% + 29px);
