--- a/public/css/less/include/header.less
+++ b/public/css/less/include/header.less
@@ -1,10 +1,24 @@
+
+@media screen and (-webkit-min-device-pixel-ratio:0)
+and (min-resolution:.001dpcm) {
+  header.page-head.index-page {
+    nav.main-menu {
+      top: 144px;
+    }
+  }
+  header.page-head {
+    nav.main-menu {
+      top: 144px;
+    }
+  }
+}
 header.page-head.index-page {
   display: flex;
   flex-direction: column;
   margin-left: 61px;
   position: relative;
   padding-bottom: 120px;
-  background: url(../img/);
+  background: transparent;
   .info-row {
     display: flex;
     padding: 30px 90px 50px 60px;
