--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -172,27 +172,27 @@ body{
         justify-content: space-between;
         position: relative;
         &.t1 {
-          background: url(../img/t1-s.png) no-repeat center center, #f2f2f2;
+          background: url(../img/t1-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
           &:hover {
-            background: url(../img/t1-s-h.png) no-repeat center center, #00933d;
+            background: url(../img/t1-s-h.png) no-repeat center calc(100% + 28px), #00933d;
           }
         }
         &.t2 {
-          background: url(../img/t2-s.png) no-repeat center center, #f2f2f2;
+          background: url(../img/t2-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
           &:hover {
-            background: url(../img/t2-s-h.png) no-repeat center center, #00933d;
+            background: url(../img/t2-s-h.png) no-repeat center calc(100% + 28px), #00933d;
           }
         }
         &.t3 {
-          background: url(../img/t3-s.png) no-repeat center center, #f2f2f2;
+          background: url(../img/t3-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
           &:hover {
-            background: url(../img/t3-s-h.png) no-repeat center center, #00933d;
+            background: url(../img/t3-s-h.png) no-repeat center calc(100% + 28px), #00933d;
           }
         }
         &.t4 {
-          background: url(../img/t4-s.png) no-repeat center center, #f2f2f2;
+          background: url(../img/t4-s.png) no-repeat center calc(100% + 28px), #f2f2f2;
           &:hover {
-            background: url(../img/t4-s-h.png) no-repeat center center, #00933d;
+            background: url(../img/t4-s-h.png) no-repeat center calc(100% + 28px), #00933d;
           }
         }
 
@@ -238,15 +238,15 @@ body{
         justify-content: space-between;
         position: relative;
         &.t1 {
-          background: url(../img/t1.png) no-repeat center right, #f2f2f2;
+          background: url(../img/t1.png) no-repeat bottom right, #f2f2f2;
           &:hover {
-            background: url(../img/t1-h.png) no-repeat center right, #00933d;
+            background: url(../img/t1-h.png) no-repeat bottom right, #00933d;
           }
         }
         &.t2 {
-          background: url(../img/t2.png) no-repeat center right, #f2f2f2;
+          background: url(../img/t2.png) no-repeat bottom right, #f2f2f2;
           &:hover {
-            background: url(../img/t2-h.png) no-repeat center right, #00933d;
+            background: url(../img/t2-h.png) no-repeat bottom right, #00933d;
           }
         }
         &:hover {
@@ -283,21 +283,14 @@ body{
     }
   }
   .wrap-1200:after {
-    content: '';
-    display: block;
-    background: url(../img/pazzle-down-white.PNG);
-    width: 236px;
-    height: 80px;
-    margin-top: 77px;
-    margin-left: 30px;
-    position: absolute;
+
   }
 }
 
 p.button-row {
   button.connect {
     color: #333333;
-    background: #ffffff;
+    background: linear-gradient(to bottom, #ffe554, #ffcc01 100%);
     display: none;
     border: none;
     padding: 10px 20px;
@@ -333,7 +326,7 @@ p.button-row {
       }
     }
     p.sub-title {
-      color: #ffffff;
+      color: #999999;
       font-family: @Ubuntu;
       max-width: 450px;
       font-size: 20px;
@@ -358,20 +351,11 @@ p.button-row {
   position: relative;
   .wrap-1200 {
     background: url(../img/wifi-ind.png) no-repeat center 230px;
-    padding-bottom: 80px;
+    padding-bottom: 155px;
     position: relative;
     z-index: 5;
-    &:before {
-      content: '';
-      display: block;
-      clear: both;
-      width: 100%;
-      height: 60px;
-      top: -60px;
-      position: relative;
-      background: url(../img/pazzle-up-green.PNG) no-repeat;
-      background-position-x: calc(100% - 8px);
-    }
+
+
     h2.title {
       color: #ffffff;
       font-size: 60px;
@@ -392,7 +376,7 @@ p.button-row {
     .application {
       max-width: 460px;
       margin: 55px auto 0;
-      padding: 30px 70px;
+      padding: 30px 70px 20px;
       box-sizing: border-box;
       border-radius: 20px;
       position: relative;
@@ -406,24 +390,41 @@ p.button-row {
         padding-bottom: 40px;
       }
       .row {
-        padding-bottom: 30px;
+        padding-bottom: 25px;
         position: relative;
         .row-name {
           display: block;
           font-family: @Ubuntu;
           color: #333333;
           font-size: 20px;
-          padding-bottom: 5px;
+          padding-bottom: 6px;
         }
         .popup-field {
           width: 100%;
           box-sizing: border-box;
-          padding: 10px;
+          padding: 12px 10px 12px 10px;
           border-radius: 5px;
           border: 1px solid #cccccc;
           font-size: 20px;
           font-weight: normal;
           font-family: @Ubuntu;
+          &::-moz-placeholder{
+            color: #cccccc;
+            font-family: @Ubuntu;
+            font-weight: normal;
+            font-size: 1px;
+          }
+          &::-webkit-input-placeholder{
+            color: #cccccc;
+            font-family: @Ubuntu;
+            font-weight: normal;
+
+          }
+          &:-ms-input-placeholder{
+            color: #cccccc;
+            font-family: @Ubuntu;
+            font-weight: normal;
+          }
           &[data-field-name="address"] {
             padding-right: 71px;
           }
@@ -431,15 +432,23 @@ p.button-row {
             outline: none;
             border: 1px solid @dark-green;
           }
+          &.error{
+            border:1px solid red;
+          }
         }
         .map-button {
           position: absolute;
           right: 10px;
           text-align: right;
+          font-family: @Ubuntu;
           font-size: 12px;
           text-decoration: underline;
           color: @link-color;
           top: 40px;
+          &:hover{
+            color:#21cc47;
+            cursor: pointer;
+          }
         }
         &.button {
           text-align: right;
@@ -749,6 +758,8 @@ li.comment-item {
 }
 
 @import "pages/how-to-connect";
+@import "pages/tarfis";
+@import "pages/about";
 
 
 
