--- a/public/css/less/include/mixins.less
+++ b/public/css/less/include/mixins.less
@@ -11,6 +11,7 @@
   background-repeat: repeat-x;
   color: @color;
   &:hover{
+    cursor: pointer;
     background: -moz-linear-gradient(to left, @border_h, @border_h 100%);
     background: -ms-linear-gradient(to left, @border_h, @border_h 100%);
     background: -o-linear-gradient(to left, @border_h, @border_h 100%);
@@ -35,5 +36,14 @@
     background-size: 10px 1px;
     background-repeat: repeat-x;
     color: @hover;
+  }
+}
+
+@keyframes Arrow {
+  from{
+    background-position: 100px 0, 80px 0, 900px 0, 880px 0;
+  }
+  to{
+    background-position: 100px 110px, 80px 100px, 900px 100px, 880px 100px;
   }
 }
