fix mail footer

--- a/public/css/less/include/footer.less
+++ b/public/css/less/include/footer.less
@@ -22,7 +22,7 @@ footer.footer {
             &:after{
               content: ' ';
               display: inline-block;
-              background: url(../img/mail.PNG) no-repeat;
+              background: url(../img/mail.png) no-repeat;
               width: 40px;
               height: 30px;
               position: absolute;
