--- a/public/css/less/include/core.less
+++ b/public/css/less/include/core.less
@@ -212,6 +212,9 @@ body{
           }
         }
         p.tarif-name {
+          &[data-mb="75"] {
+            font-size: 72px;
+          }
           font-family: @UbuntuBold;
           font-size: 60px;
           padding-left: 20px;
@@ -264,9 +267,19 @@ body{
             }
           }
         }
+
         p.tarif-name {
+          &[data-mb="100"]{
+            font-size: 96px;
+            span.text {
+              font-size: 24px;
+              position: relative;
+              top: 32px;
+              left: -70px;
+            }
+          }
           font-family: @UbuntuBold;
-          font-size: 60px;
+          font-size: 64px;
           padding-left: 20px;
           padding-top: 5px;
 
