--- a/public/css/less/include/pages/tarfis.less
+++ b/public/css/less/include/pages/tarfis.less
@@ -15,8 +15,8 @@
                 url(../img/small-arrow.png) no-repeat 80px 0px,
                 url(../img/big-arrow.png) no-repeat 900px 0px,
                 url(../img/small-arrow.png) no-repeat 880px 0px,#40ae49;
-    animation: Arrow 1s infinite ease;
-    background-position: 100px 0, 80px 0, 900px 0, 880px 0;
+
+    background-position: 100px 35px, 80px 0, 900px 0, 780px 54px;
 
 
     max-width: 1000px;
@@ -171,8 +171,11 @@
               }
             }
             p.tarif-name {
+              &[data-mb="75"]{
+               font-size: 72px;
+              }
               font-family: @UbuntuBold;
-              font-size: 60px;
+              font-size: 64px;
               padding-left: 20px;
               padding-top: 5px;
 
@@ -224,8 +227,11 @@
               }
             }
             p.tarif-name {
+              &[data-mb="100"]{
+                font-size: 96px;
+              }
               font-family: @UbuntuBold;
-              font-size: 60px;
+              font-size: 64px;
               padding-left: 20px;
               padding-top: 5px;
 
