--- a/public/css/less/include/header.less
+++ b/public/css/less/include/header.less
@@ -108,11 +108,18 @@ header.page-head.index-page {
       display: flex;
       li.menu-item {
         padding: 0 25px;
+        &.active{
+          .menu-link{
+          background: none;
+          color: #333333;
+          }
+        }
         .menu-link {
           font-family: UbuntuBold;
           text-transform: uppercase;
           font-size: 18px;
           .link(@link-color, @link-border, #cccccc, #cccccc);
+
         }
       }
     }
@@ -212,6 +219,12 @@ header.page-head {
       display: flex;
       li.menu-item {
         padding: 0 25px;
+        &.active{
+          .menu-link{
+            background: none;
+            color: #333333;
+          }
+        }
         .menu-link {
           font-family: UbuntuBold;
           text-transform: uppercase;
